fix github bug with cut off actions sidebar

--- a/github-dark.user.css
+++ b/github-dark.user.css
@@ -6475,6 +6475,10 @@
     padding-top: 0 !important;
     padding-bottom: 0 !important;
   }
+  /* GitHub Bug: Fix cut-off actions sidebar */
+  .js-check-suites-sidebar {
+    height: auto !important;
+  }
   /* Opinionated: Remove excessive box padding and adjust avatars to match */
   .Box-row, .Box-header, .Box-body {
     padding: 8px 12px;
